# narada

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  FuturePad.md  README.md  SCRATCHPAD.md  config.py  pendulum-3.0.0-cp312-cp312-macosx_10_12_x86_64.whl  pyproject.toml  pyrightconfig.json  pytest.ini  time_machine-2.16.0-cp312-cp312-macosx_10_9_x86_64.whl
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPMENT.md  backlog.md  implementation_plan.md  likes_sync_guide.md  narada_bible.md  workflow_guide.md
docs/scratchpad_archive/: SCRATCHPAD_v0.2.3_testing_cleanup.md
narada/: __init__.py  config.py
narada/cli/: __init__.py  app.py  command_registry.py  commands.py  setup_commands.py  status_commands.py  sync_commands.py  ui.py  workflow_commands.py
narada/core/: __init__.py  matcher.py  models.py  old_matcher.py  protocols.py  repositories.py  transforms.py
narada/data/: __init__.py  database.py  test_database.py
narada/database/: __init__.py  database.py  db_connection.py  db_models.py  dbmodels.py
narada/database/migrations/: add_confidence_evidence.py
narada/integrations/: __init__.py  base_connector.py  lastfm.py  metrics_registry.py  musicbrainz.py  protocols.py  spotify.py
narada/playlists/: operations.py  transformers.py
narada/repositories/: __init__.py  base.py  base_repo.py  playlist.py  playlist_repo.py  repo_decorator.py  sync.py  track.py  track_core.py  track_core_repo.py  track_repo.py  track_sync.py  track_sync_repo.py
narada/repositories/playlist/: __init__.py  connector.py  core.py  mapper.py
narada/repositories/track/: __init__.py  connector.py  core.py  likes.py  mapper.py  metrics.py  sync.py
narada/services/: __init__.py  like_operations.py  like_sync.py
narada/workflows/: __init__.py  component_factories.py  component_registry.py  components.py  destination_nodes.py  node_catalog.py  node_context.py  node_factories.py  node_registry.py  prefect.py  registry.py  source_nodes.py  transform_registry.py  workflow_components.py  workflow_nodes.py
narada/workflows/definitions/: discovery_mix.json  sort_by_lastfm_global_playcount.json  sort_by_lastfm_user_playcount.json  sort_by_plays.json  sort_by_release_date.json
src/: __init__.py  config.py
src/application/: __init__.py
src/application/services/: __init__.py  external_metadata_service.py  import_service.py  matching_service.py  play_history_enricher.py  sync_service.py
src/application/use_cases/: __init__.py  enrich_tracks.py  execute_workflow.py  import_tracks.py  match_tracks.py  resolve_track_identity.py  save_playlist.py  sync_likes.py  update_playlist.py
src/application/utilities/: __init__.py  batching.py  progress.py  progress_integration.py  results.py  simple_batching.py
src/application/workflows/: __init__.py  context.py  destination_nodes.py  node_catalog.py  node_context.py  node_factories.py  node_registry.py  prefect.py  protocols.py  source_nodes.py  transform_registry.py
src/config/: __init__.py  logging.py  settings.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  operations.py  playlist.py  shared.py  track.py
src/domain/matching/: __init__.py  algorithms.py  protocols.py  types.py
src/domain/repositories/: __init__.py  interfaces.py
src/domain/transforms/: __init__.py  core.py
src/domain/workflows/: __init__.py  playlist_operations.py
src/infrastructure/: __init__.py  config.py
src/infrastructure/cli/: __init__.py  app.py  async_helpers.py  command_registry.py  completions.py  data_commands.py  likes_commands.py  plays_commands.py  progress_provider.py  setup_commands.py  status_commands.py  ui.py  workflows_commands.py
src/infrastructure/connectors/: __init__.py  base_connector.py  lastfm.py  metrics_config.py  musicbrainz.py  protocols.py  spotify.py  spotify_personal_data.py
src/infrastructure/persistence/: unit_of_work.py
src/infrastructure/services/: __init__.py  base_import.py  connector_metadata_manager.py  external_metadata_service_impl.py  import_orchestrator.py  lastfm_import.py  like_operations.py  like_service.py  like_sync.py  matcher.py  matcher_service.py  metadata_freshness_controller.py  play_deduplication.py  spotify_import.py  spotify_play_resolver.py  spotify_playlist_sync.py  track_identity_resolver.py  (+1 more)
tests/: conftest.py
tests/application/: conftest.py  test_enrich_tracks_use_case.py  test_play_history_enricher.py  test_resolve_track_identity_use_case.py  test_track_upsert_enrichment_strategy.py  test_update_playlist_integration.py
tests/cli/: __init__.py  test_app_help.py  test_cli_commands.py  test_cli_integration.py  test_cli_smoke.py  test_data_commands.py  test_playlist_commands.py  test_workflows_cli.py
tests/domain/: __init__.py  conftest.py  test_play_history_transforms.py  test_playlist_operations.py  test_track_operations.py
tests/fixtures/: __init__.py  models.py
tests/infrastructure/: conftest.py  test_database_first_workflow_compliance.py  test_lastfm_likes.py  test_lastfm_play_import.py  test_spotify_import.py  test_spotify_likes.py
tests/integration/: __init__.py  conftest.py  test_connector_contracts.py  test_database.py  test_enricher_metrics_storage.py  test_enricher_nodes.py  test_node_context_integration.py  test_play_history_workflow.py  test_playlist_update_e2e.py  test_rate_limiting_fallback.py  test_workflow_context_contracts.py  test_workflow_definitions.py  test_workflow_execution_e2e.py  test_workflow_nodes_e2e.py
tests/test_core/: test_models.py
tests/test_integrations/: test_spotify_persistence_flow.py
tests/tests_data/: test_database.py
tests/unit/: __init__.py  conftest.py  test_application_batching.py  test_application_progress.py  test_base_import_service.py  test_cli_completions.py  test_domain_entities.py  test_domain_matching.py  test_domain_transforms.py  test_domain_workflows.py  test_enricher_key_types.py  test_import_strategy_pattern.py  test_lastfm_import_refactored.py  test_lastfm_import_service.py  test_lastfm_workflow_comprehensive.py  test_spotify_import_refactored.py  test_unified_operation_result.py
(+60 files in other folders)
