[tool.poetry]
name = "narada"
version = "0.1.0"
description = "Music metadata integration platform for Spotify, Last.fm, and MusicBrainz"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "narada"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
alembic = "^1.13.1"
httpx = "^0.27.0"  # Modern async HTTP client replacement for requests
spotipy = "^2.23.0"
pylast = "^5.2.0"
musicbrainzngs = "^0.7.1"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
typer = "^0.9.0"  # Modern CLI framework
attrs = "^23.2.0"
toolz = "^0.12.1"
backoff = "^2.2.1"
aiosqlite = "^0.19.0"  # Async SQLite support

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.5"  # Async test support
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.1.15"  # Modern replacement for isort, flake8, etc.
pre-commit = "^3.6.0"

[tool.poetry.scripts]
narada = "narada.cli.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

# Enable Pyflakes and pycodestyle rules
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Sort imports
[tool.ruff.isort]
known-first-party = ["narada"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["narada"]
omit = ["tests/*"]