[tool.poetry]
name = "narada"
version = "0.1.0"
description = "Music metadata integration platform for Spotify, Last.fm, and MusicBrainz"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "narada"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}
alembic = "^1.14.1"
httpx = "^0.28.1"  # Modern async HTTP client replacement for requests
spotipy = "^2.25.0"
pylast = "^5.3.0"
musicbrainzngs = "^0.7.1"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
rich = "^13.7.0"
typer = "^0.15.1"  # Modern CLI framework
attrs = "^25.1.0"
toolz = "^1.0.0"
backoff = "^2.2.1"

aiosqlite = "^0.21.0"  # Async SQLite support

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"  # Async test support
pytest-cov = "^6.0.0"
black = "^25.1.0"
ruff = "^0.3.5"  # Modern replacement for isort, flake8, etc.
pre-commit = "^4.1.0"

[tool.poetry.scripts]
narada = "narada.cli.app:main"
test-db = "narada.data.test_database:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

# Enable Pyflakes and pycodestyle rules
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Sort imports
[tool.ruff.isort]
known-first-party = ["narada"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["narada"]
omit = ["tests/*"]